2020-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'dependencies' badge

2020-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2016-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/rmsfact.R (rmsfact): Support ind argument
	(.read.rms): Support encoding

	* .travis.yml: Rewritten for run.sh from forked r-travis

2016-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.2

	* R/rmsfact.R (.read.rms): Skip lines starting with '##'

	* inst/rmsfact/rmsfact.txt: Replaced / with ' as delimiter

	* inst/NEWS.Rd: Added

2016-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First CRAN upload of finalised version 0.0.1

	* R/rmsfact.R: Added @seealso and @examples; the print method now
	uses strwrap

	* README.md: Expanded
	* .travis.yml: Added

	* inst/rmsfact/rmsfact.txt: Added copyright notice and link to source

2016-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First version
	* NAMESPACE: Ditto
	* inst/rmsfact/rmsfact.txt: Ditto
	* R/rmsfact.R: Ditto
	* man/rmsfact.Rd: Ditoo