@@ -1,3 +1,7 @@
+2021-01-17  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-05-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'dependencies' badge
